--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,13 @@
     },
     "require": {
         "php": "^8.0",
+        "doctrine/migrations": "^3.0",
+        "doctrine/orm": "^2.7",
         "richcongress/bundle-toolbox": "^1.1",
         "sensio/framework-extra-bundle": "^5.4|^6.0",
         "symfony/event-dispatcher": "^5.4|^6.0",
         "symfony/mailer": "^5.4|^6.0",
+        "symfony/translation": "^5.4|^6.0",
         "symfony/mime": "^5.4|^6.0"
     },
     "require-dev": {
