--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -33,7 +33,9 @@
         </include>
         <exclude>
             <directory>src/Infrastructure/DependencyInjection</directory>
+            <directory>src/Infrastructure/Migrations</directory>
             <directory>src/Infrastructure/Resources</directory>
+            <directory>src/Infrastructure/TestCase</directory>
             <file>src/Infrastructure/RichIdMailerBundle.php</file>
         </exclude>
     </coverage>
