--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,9 @@
         "sensio/framework-extra-bundle": "^5.4|^6.0",
         "symfony/event-dispatcher": "^5.4|^6.0",
         "symfony/mailer": "^5.4|^6.0",
+        "symfony/mime": "^5.4|^6.0",
         "symfony/translation": "^5.4|^6.0",
-        "symfony/mime": "^5.4|^6.0"
+        "twig/twig": "^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "^2.0",
