--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/mailer": "^5.4|^6.0",
         "symfony/mime": "^5.4|^6.0",
         "symfony/translation": "^5.4|^6.0",
+        "symfony/twig-bundle": "^5.4|^6.0",
         "twig/twig": "^3.0"
     },
     "require-dev": {
