--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/event-dispatcher": "^5.4|^6.0",
         "symfony/mailer": "^5.4|^6.0",
         "symfony/mime": "^5.4|^6.0",
+        "symfony/serializer": "^6.0",
         "symfony/translation": "^5.4|^6.0",
         "symfony/twig-bundle": "^5.4|^6.0",
         "twig/twig": "^3.0"
