--- a/composer.json
+++ b/composer.json
@@ -21,19 +21,19 @@
         "php": "^8.1",
         "doctrine/migrations": "^3.0",
         "doctrine/orm": "^2.7 || ^3.0",
-        "richcongress/bundle-toolbox": "v2.x-dev",
-        "symfony/event-dispatcher": "^5.4 || ^6.0 || ^7.0",
-        "symfony/mailer": "^5.4 || ^6.0 || ^7.0",
-        "symfony/mime": "^5.4 || ^6.0 || ^7.0",
-        "symfony/translation": "^5.4 || ^6.0 || ^7.0",
-        "symfony/twig-bundle": "^5.4 || ^6.0 || ^7.0",
+        "richcongress/bundle-toolbox": "^2.0",
+        "symfony/event-dispatcher": "^6.0 || ^7.0",
+        "symfony/mailer": "^6.0 || ^7.0",
+        "symfony/mime": "^6.0 || ^7.0",
+        "symfony/translation": "^6.0 || ^7.0",
+        "symfony/twig-bundle": "^6.0 || ^7.0",
         "twig/twig": "^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "^2.0",
         "phpunit/phpunit": "^9.5",
-        "richcongress/static-analysis": "v0.2.x-dev",
-        "richcongress/test-suite": "v0.2.x-dev",
+        "richcongress/static-analysis": "^0.2",
+        "richcongress/test-suite": "^0.2",
         "roave/security-advisories": "dev-latest"
     },
     "autoload": {
