Add new subject prefix logic + custome sender name

--- a/tests/Resources/Kernel/config/services.yaml
+++ b/tests/Resources/Kernel/config/services.yaml
@@ -10,3 +10,4 @@ services:
 
     RichId\MailerBundle\Tests\Resources\Fixtures\EmailFooterFixtures: ~
     RichId\MailerBundle\Tests\Resources\Stub\ParameterBagStub: ~
+    RichId\MailerBundle\Tests\Resources\CustomSubjectPrefix: ~
